# super-mastermind

./: Cargo.toml  README.md  readme.txt
src/: color.rs  colors.rs  enum_color.rs  main.rs  temp.rs
