[package]
name = "super-mastermind"
version = "0.1.0"
authors = ["PERNICENI Ugo <ugo.perniceni@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"

rand = "0.8.0" # To generate a random number

strum = "0.20" # To iterate through Enum Color
strum_macros = "0.20" # To iterate through Enum Color
